# Infinite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
assets/shaders/: basic.frag  basic.vert  sky.frag  sky.vert
crates/infinite-assets/: Cargo.toml
crates/infinite-assets/src/: error.rs  gltf_loader.rs  handle.rs  lib.rs  mesh.rs  server.rs  texture.rs
crates/infinite-audio/: Cargo.toml
crates/infinite-audio/src/: config.rs  error.rs  lib.rs  manager.rs  music.rs  sfx.rs  spatial.rs
crates/infinite-core/: Cargo.toml
crates/infinite-core/src/: lib.rs  time.rs  types.rs
crates/infinite-ecs/: Cargo.toml
crates/infinite-ecs/src/: component.rs  entity.rs  lib.rs  query.rs  resource.rs  system.rs  world.rs
crates/infinite-game/: Cargo.toml
crates/infinite-game/src/: input.rs  interaction.rs  lib.rs
crates/infinite-game/src/camera/: config.rs  controller.rs  mod.rs
crates/infinite-game/src/combat/: catalog.rs  damage.rs  element.rs  equipment.rs  gem.rs  inventory.rs  item.rs  item_conversion.rs  mod.rs  rune.rs  skill.rs  starter_items.rs  status.rs  weapon.rs
crates/infinite-game/src/npc/: ai_dialogue.rs  archetype_mapping.rs  character_cache.rs  combat.rs  dialogue.rs  game_context.rs  manager.rs  mod.rs  npc_generator.rs  relationship.rs  spawn.rs
crates/infinite-game/src/npc/goap/: action.rs  goal.rs  mod.rs  planner.rs  world_state.rs
crates/infinite-game/src/player/: controller.rs  mod.rs  movement.rs  stats.rs
crates/infinite-integration/: Cargo.toml
crates/infinite-integration/src/: ai_chat.rs  auth.rs  character.rs  character_item.rs  client.rs  error.rs  game_story.rs  lib.rs  types.rs
crates/infinite-net/: Cargo.toml
crates/infinite-net/src/: lib.rs
crates/infinite-physics/: Cargo.toml
crates/infinite-physics/src/: character_controller.rs  lib.rs
crates/infinite-render/: Cargo.toml
crates/infinite-render/src/: lib.rs  mesh.rs  scene.rs  vertex.rs
crates/infinite-world/: Cargo.toml
crates/infinite-world/src/: chunk.rs  era_config.rs  lib.rs  terrain.rs  time_of_day.rs  weather.rs
src/: main.rs  save.rs  settings.rs  state.rs
src/character/: mod.rs  persistence.rs
src/ui/: character_creator.rs  inventory_menu.rs  loading_screen.rs  login_menu.rs  main_menu.rs  mod.rs  pause_menu.rs  save_load_menu.rs  settings_menu.rs  shop_menu.rs
src/ui/admin/: item_editor.rs  mod.rs  story_editor.rs
