[workspace]
resolver = "2"
members = [
    "crates/infinite-core",
    "crates/infinite-ecs",
    "crates/infinite-render",
    "crates/infinite-physics",
    "crates/infinite-audio",
    "crates/infinite-world",
    "crates/infinite-net",
    "crates/infinite-assets",
    "crates/infinite-game",
    "crates/infinite-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pixygon <dev@pixygon.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pixygon/Infinite"

[workspace.dependencies]
# Internal crates
infinite-core = { path = "crates/infinite-core" }
infinite-ecs = { path = "crates/infinite-ecs" }
infinite-render = { path = "crates/infinite-render" }
infinite-physics = { path = "crates/infinite-physics" }
infinite-audio = { path = "crates/infinite-audio" }
infinite-world = { path = "crates/infinite-world" }
infinite-net = { path = "crates/infinite-net" }
infinite-assets = { path = "crates/infinite-assets" }
infinite-game = { path = "crates/infinite-game" }
infinite-integration = { path = "crates/infinite-integration" }

# Vulkan
vulkano = "0.35"
vulkano-shaders = "0.35"
ash = "0.38"

# Additional rendering
bytemuck = { version = "1.18", features = ["derive"] }
noise = "0.9"

# Windowing
winit = "0.30"

# Math
glam = { version = "0.29", features = ["serde"] }
nalgebra = "0.33"

# Physics
rapier3d = "0.22"

# Audio
kira = "0.9"

# Assets
gltf = "1.4"
image = "0.25"

# Networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UI
egui = "0.31"
egui-winit = "0.31"
egui_winit_vulkano = "0.28"

# Utility
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
toml = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[package]
name = "infinite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
infinite-core.workspace = true
infinite-game.workspace = true
infinite-integration.workspace = true
infinite-physics.workspace = true
infinite-render.workspace = true
infinite-world.workspace = true
vulkano.workspace = true
vulkano-shaders.workspace = true
bytemuck.workspace = true
winit.workspace = true
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
egui.workspace = true
egui_winit_vulkano.workspace = true
toml.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "infinite"
path = "src/main.rs"
