[package]
name = "infinite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, time system, and utilities for the Infinite engine"

[dependencies]
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
