[package]
name = "infinite-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PixygonServer API integration for Infinite"

[dependencies]
infinite-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
