[package]
name = "infinite-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Networking layer for the Infinite engine"

[dependencies]
infinite-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
